button ui added

--- a/admin/css/app.css
+++ b/admin/css/app.css
@@ -15283,7 +15283,7 @@ fieldset:disabled a.btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #8b5cf6;
+    background-color: #2a1061;
     border-color: #8b5cf6;
 }
 
